@@ -31,6 +31,7 @@ in a shaft or an elevator
 -added support for writing text onto a texture with the AddText command
 -fixed a memory leak involving floor beeps
 -added support for texture name prefixes, used with floor indicators and signs
+-added support for cropping and overlaying textures with the LoadCropped and AddOverlay commands
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
